--- a/2022/MS/notes/notes.tex
+++ b/2022/MS/notes/notes.tex
@@ -97,8 +97,8 @@
 	We define the following operations:
 	\begin{align}
 		\label{sequence_operations}
-		+:\ell^1\times \ell^1\to \ell^1;(x,y)\mapsto x+y            & =(x_n+y_n)_{n\in\N}=(x_1+y_1,x_2+y_2,...,x_n+y_n,...),                 \\
-		\cdot:\R\times \ell^1\to \ell^1;(\lambda,x)\mapsto\lambda x & =(\lambda x_n)_{n\in\N}=(\lambda x_1,\lambda x_2,...,\lambda x_n,...).
+		+:\ell^p\times \ell^p\to \ell^p;(x,y)\mapsto x+y            & =(x_n+y_n)_{n\in\N}=(x_1+y_1,x_2+y_2,...,x_n+y_n,...),                 \\
+		\cdot:\R\times \ell^p\to \ell^p;(\lambda,x)\mapsto\lambda x & =(\lambda x_n)_{n\in\N}=(\lambda x_1,\lambda x_2,...,\lambda x_n,...).
 	\end{align}
 	Then $(\ell^p,+,\cdot)$ is a vector space.
 	We define $\vabs{-}_p:\ell^p\to\R$ by
