--- a/2022/MS/notes/notes.tex
+++ b/2022/MS/notes/notes.tex
@@ -42,7 +42,8 @@
 	Let $a,b\in\R$ with $a<b$.
 	Then the set of all real valued continuous functions defined of real valued
 	continuous functions defined on $[a,b]$, denoted $C([a,b])$, together with
-	the usual operations of addition and scalar multiplication is a vector space.
+	the usual operations of addition and scalar multiplication is a real 
+	vector space.
 	Further let $d:C([a,b])\times C([a,b])\to \R$ be given by
 	\begin{align}
 		\label{metric-cab}
@@ -96,11 +97,12 @@
 	$\sum_{n=1}^\infty \abs{x_n}^p$ converges be denoted by $\ell^p$.
 	We define the following operations:
 	\begin{align}
-		\label{sequence_operations}
+		\label{sequence_addition}
 		+:\ell^p\times \ell^p\to \ell^p;(x,y)\mapsto x+y            & =(x_n+y_n)_{n\in\N}=(x_1+y_1,x_2+y_2,...,x_n+y_n,...),                 \\
+		\label{sequence_scaling}
 		\cdot:\R\times \ell^p\to \ell^p;(\lambda,x)\mapsto\lambda x & =(\lambda x_n)_{n\in\N}=(\lambda x_1,\lambda x_2,...,\lambda x_n,...).
 	\end{align}
-	Then $(\ell^p,+,\cdot)$ is a vector space.
+	Then $(\ell^p,+,\cdot)$ is a real vector space.
 	We define $\vabs{-}_p:\ell^p\to\R$ by
 	\begin{align*}
 		\vabs x_p = \left(\sum_{n=1}^\infty \abs{x_n}^p\right)^{1/p}.
@@ -115,7 +117,8 @@
 
 \begin{lemma}
 	Let the set of all bounded real sequences be denoted by $\ell^\infty$. Then, together with
-	the usual operations defined in (\ref{sequence_operations}), $\ell^\infty$ is a vector space.
+	the usual operations defined in (\ref{sequence_addition}) and (\ref{sequence_scaling}),
+	$\ell^\infty$ is a real vector space.
 	We define $\vabs{-}_\infty:\ell^\infty\to\R$ by
 	\begin{align*}
 		\vabs x_\infty = \sup\{\abs{x_n}:n\in\N\}.
@@ -149,7 +152,7 @@
 \subsection{Inner products and inner product spaces}
 
 \begin{definition}[Inner product space]
-	Let $X$ be a real vector space over $\R$. An \emph{inner product}
+	Let $X$ be a real vector space. An \emph{inner product}
 	is a map $\lra{.,.}:X\times X\to\R$ where for all $x,y,z\in X$ and
 	$\lambda,\mu\in\R$,
 	\begin{enumerate}
@@ -223,7 +226,7 @@
 	of pairwise disjoint open intervals.
 \end{theorem}
 
-\subsection{Another look at continuity and uniform continuity}
+\subsection{Continuity and uniform continuity}
 
 \begin{proposition}[2.23]
 	If $K\subseteq\R$ is compact and $f:K\to\R$ is continuous, then $f$ is
@@ -245,7 +248,7 @@
 	image $\inv f(G)$ of every open set $G$ is a relatively open subset of $A$.
 \end{theorem}
 
-\subsection{Compact sets and the Heine-Borel theorem}
+\subsection{Heine-Borel theorem}
 
 \begin{definition}
 	A subset $K\subseteq\R$ is said to be\emph{compact} if every sequence of elements
